enable logback and delete the nodes

--- a/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/person/enter-person-detail.html
+++ b/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/person/enter-person-detail.html
@@ -19,6 +19,9 @@
 		<p>
 			<a th:href="@{/find-person-by-id}">Find Person By Id</a>
 		</p>
+		<p>
+			<a th:href="@{/remove-person}">Delete Person</a>
+		</p>
 	</form>
 </body>
 </html>
