--- a/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/person/find-person-by-id.html
+++ b/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/person/find-person-by-id.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Find Person By Id</title>
+<title>Spring-Data-Neo4j Example</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
@@ -14,5 +14,7 @@
 			<input type="submit" value="Submit" /> <input type="reset" value="Reset" />
 		</p>
 	</form>
+	<h2>Menu: </h2>
+	<div th:replace="fragments/footer :: footer"></div> 
 </body>
 </html>
