--- a/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/person/remove-person.html
+++ b/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/person/remove-person.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Graph Database Demo</title>
+<title>Spring-Data-Neo4j Example</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
@@ -15,12 +15,8 @@
 		<p>
 			<input type="submit" value="Submit" /> <input type="reset" value="Reset" />
 		</p>
-		<p>
-			<a th:href="@{/find-person-by-id}">Find Person By Id</a>
-		</p>
-		<p>
-			<a th:href="@{/save-person}">Save Person</a>
-		</p>
+		<h2>Menu: </h2>
+		<div th:replace="fragments/footer :: footer"></div> 
 	</form>
 </body>
 </html>
