--- a/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/person/view-person-detail.html
+++ b/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/person/view-person-detail.html
@@ -1,28 +1,37 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>View Person Detail</title>
+<title>Spring-Data-Neo4j Example</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<style>
+		thead {color:green;}
+		tbody {color:blue;}
+		table,th,td {border:1px solid black;}
+		td { text-align: center; }
+	</style>
 </head>
 <body>
 	<h1>Person Detail</h1>
-	<p th:text="'Id: ' + ${actor.id}" />
-	<p th:text="'Name ' + ${actor.name}" />
-	<p> Friends Names </p>
-	<table>
+	<p th:text="'Id: ' + ${person.id}" />
+	<p th:text="'Name: ' + ${person.name}" />
+	<h2> Friends Names </h2>
+	<table border="1" style="width:300px">
+		<thead>
+			<tr>
+				<th>Id</th>
+				<th>Name</th>
+			</tr>
+		</thead>
 		<tbody>
 			<th:block th:each="friend: ${personFriends}">
 			<tr>
-				<td th:text="${friend.person.name}"> </td>
+				<td th:text="${friend.friend.id}"></td>
+				<td th:text="${friend.friend.name}"> </td>
 			</tr>
 			</th:block>
 		</tbody>
 	</table>
-	<p>
-		<a th:href="@{/save-person}">Save Another Person</a>
-	</p>
-	<p>
-		<a th:href="@{/make-friends}">Makes Friends</a>
-	</p>
+	<h2>Menu: </h2>
+	<div th:replace="fragments/footer :: footer"></div> 
 </body>
 </html>
