implement update operation in sample

--- a/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/fragments/footer.html
+++ b/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/fragments/footer.html
@@ -12,6 +12,9 @@
 			<a th:href="@{/remove-person}">Remove Person</a>
 		</p>
 		<p>
+			<a th:href="@{/update-person-detail}">Update Person</a>
+		</p>
+		<p>
 			<a th:href="@{/make-friends}">Makes Friends</a>
 		</p>
 	</div>
