Changes in company relationship

--- a/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/fragments/footer.html
+++ b/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/fragments/footer.html
@@ -17,6 +17,12 @@
 		<p>
 			<a th:href="@{/make-friends}">Makes Friends</a>
 		</p>
+		<p>
+			<a th:href="@{/create-company}">Create Company</a>
+		</p>
+		<p>
+			<a th:href="@{/make-employee}">Makes Employee</a>
+		</p>
 	</div>
 </body>
 </html>
