fetch object using companies relationship.

--- a/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/fragments/footer.html
+++ b/neo4j-spring-example-web/src/main/webapp/WEB-INF/views/fragments/footer.html
@@ -23,6 +23,9 @@
 		<p>
 			<a th:href="@{/make-employee}">Makes Employee</a>
 		</p>
+		<p>
+			<a th:href="@{/companies}">Companies</a>
+		</p>
 	</div>
 </body>
 </html>
